--- a/index.html
+++ b/index.html
@@ -16,19 +16,22 @@
     <slides class="layout-widescreen">
 
         <!-- LOGO SLIDE -->
-        <slide class="logoslide nobackground">
+        <!--<slide class="logoslide">
             <article class="flexbox vcenter">
                 <span>
                     <img src="images/bootstrap2_logo.png">
                 </span>
             </article>
         </slide>
-
+-->
         <!-- TITLE SLIDE -->
-        <slide class="title-slide segue nobackground">
+        <slide class="title-slide segue nobackground first">
             <aside class="gdbar">
+                <img src="images/html5-logo-128.png">
                 <img src="images/bootstrap_128.png">
+                <img src="images/css3-logo-128.png">
             </aside>
+            <div class="preview hawaii-rainbow"></div>
             <!-- The content of this hgroup is replaced programmatically through the
             slide_config.json. -->
             <hgroup class="auto-fadein">
@@ -38,9 +41,10 @@
                 <h2 data-config-subtitle>
                     <!-- populated from slide_config.json -->
                 </h2>
-                <p data-config-presenter>
+                <p data-config-presenter class="presenter">
                     <!-- populated from slide_config.json -->
                 </p>
+                <p class="photos">Photos by <a href="http://mcginityphoto.com">Trish McGinity</a></p>
             </hgroup>
         </slide>
 
@@ -52,36 +56,83 @@
             <article class="smaller">
                 <div class="columns-2">
                 <ul>
-                    <li>Senior Developer at FirstComp</li>
-                    <li>Manager Cleveland Adobe User Group</li>
-                    <li>Adobe Community Professional</li>
-                    <li>Technology Geek</li>
+                    <li>Web Architecture Consultant</li>
+                    <li>Java Community Professional</li>
+                    <li>Father, Speaker, Beer Lover</li>
                     <li>
                         What Keeps me busy
                         <ul>
-                            <li>CrossFit / Running</li>
-                            <li>Poker</li>
-                            <li>Sports</li>
+                            <li>Skiing, Mountain Biking</li>
+                            <li>The Bus</li>
+                            <li><a href="http://appfuse.org">AppFuse</a></li>
+                            <li><a href="http://raibledesigns.com">Raible Designs</a></li>
                         </ul>
                     </li>
-                    <li>Toys For Shots</li>
                     <li>
                         <b class="blue">Contact Information</b>
                         <ul>
-                            <li>www: http://www.danvega.org</li>
-                            <li>email: danvega@gmail.com</li>
-                            <li>twitter: @cfaddict</li>
+                            <li>www: http://raibledesigns.com</li>
+                            <li>email: matt@raibledesigns.com</li>
+                            <li>twitter: @mraible</li>
                         </ul>
                     </li>
                 </ul>
-                <div align="center">
-                    <br/><br/>
-                    <img src="images/firstcomp.png" alt=""><br/><br/>
-                    <img src="images/acp_logo.gif"><br/><br/>
-                    <img src="images/toysforshotslogo.jpg">
+                <div class="pictures">
+                    <img src="images/raibledesigns-logo.png" alt="">
+                    <img src="images/java-logo.png" height="100">
+                    <img src="images/thebus.jpg" height="200" class="picture">
                 </div>
 
                 </div>
+            </article>
+        </slide>
+
+        <!-- Long, Fast Intro -->
+        <slide class="fill nobackground lake-mcdonald">
+            <article class="text-large">Matt<br/>Raible</article>
+        </slide>
+
+        <slide>
+            <article>
+                <img src="images/tractor.jpg" class="picture picture-frame" style="margin: 30px 0 0 50px">
+                <img src="images/kids-with-goats.jpg" class="picture picture-frame" style="float: right; margin: 100px 50px 0 0">
+            </article>
+        </slide>
+
+        <slide>
+            <article class="flexbox vcenter">
+                <img src="images/thecabin.jpg" class="picture picture-frame">
+            </article>
+        </slide>
+
+        <slide class="fill nobackground power-lines">
+            <article>
+                <p class="picture-credit"><a href="http://flickr.com/photos/leecullivan/122271605/">http://flickr.com/photos/leecullivan/122271605/</a></p>
+            </article>
+        </slide>
+
+        <slide>
+            <article class="flexbox vcenter">
+                <img src="images/outhouse.jpg" class="picture picture-frame">
+                <p class="picture-credit"><a href="http://www.flickr.com/photos/crowleymr/2530170585/">http://www.flickr.com/photos/crowleymr/2530170585/</a></p>
+            </article>
+        </slide>
+
+        <slide class="fill nobackground the-back-road">
+            <article>
+            </article>
+        </slide>
+
+        <slide>
+            <article class="flexbox vcenter">
+                <img src="images/uphill-both-ways.jpg" class="picture picture-frame" style="width: 90%">
+                <p class="picture-credit"><a href="http://www.travelblog.org/Photos/1597321">http://www.travelblog.org/Photos/1597321</a></p>
+            </article>
+        </slide>
+
+        <slide>
+            <article class="flexbox vcenter">
+                <img src="images/thebus-640.jpg" class="picture picture-frame">
             </article>
         </slide>
 
@@ -430,7 +481,7 @@
                     </li>
                 </ul>
                 <div align="right">
-                    <img src="images/HTML5_Logo_256.png"><br/>
+                    <img src="images/html5-logo-256.png"><br/>
                     <img src="images/templates.png">
                 </div>
               </div>
