Added slides on UI Refresh Project

--- a/index.html
+++ b/index.html
@@ -263,20 +263,74 @@
         </slide>
 
         <!-- UI Refresh Project + Bootstrap -->
-        <slide>
+        <slide class="nobackground">
             <hgroup>
                 <h2>UI Refresh Project</h2>
             </hgroup>
+            <article class="flexbox vcenter" style="margin-top: 6px">
+                <img src="images/taleo-ui-form-before.jpg">
+            </article>
+            <aside class="note">
+                <section>
+                    Next, I started working on a new project - refreshing the UI. Nick, the Lead UX Designer at Taleo
+                    (at the time), had developed a number of mockups and presented it to the developers and product
+                    folks in early November. I listened to a WebEx of that meeting and learned that everyone thought
+                    it'd take 6-9 months to complete the work. They figured they could release the new design in Q3
+                    2012.
+                </section>
+            </aside>
         </slide>
 
         <!-- Spike -->
+        <slide class="nobackground">
+            <hgroup>
+                <h2>UI Refresh Spike</h2>
+            </hgroup>
+            <article class="flexbox vcenter" style="margin-top: 6px">
+                <img src="images/taleo-ui-form-after.jpg">
+            </article>
+            <aside class="note">
+                <section>
+                    I offered to help with the redesign and do a
+                    spike to help estimate. They agreed it'd be a good use of my time and I started working on it the
+                    week before Christmas. Since I'd used Twitter Bootstrap for my Play More! app, I recommended we use
+                    it as a foundation of the redesign. They agreed and I went to work. By the end of the week, I'd made
+                    good progress and told them I thought the redesign was possible in 2-3 months (including QA and
+                    cross-browser compatibility).
+
+                </section>
+            </aside>
+        </slide>
+
         <!-- CSS Sprites -->
+        <slide class="nobackground">
+            <hgroup>
+                <h2>CSS Image Sprites</h2>
+            </hgroup>
+            <article class="flexbox vcenter" style="margin-top: 6px">
+                <img src="http://farm9.staticflickr.com/8403/8669308528_1ed2c1e44d_z.jpg">
+                <div class="link">
+                    <a href="http://css-tricks.com/css-sprites/">http://css-tricks.com/css-sprites/</a>
+                </div>
+            </article>
+            <aside class="note">
+                <section>
+                    When I came back to work in January, we decided to split the redesign into two phases. Rather than moving
+                    elements around and introducing new features, we decided to do that in the 2nd phase. The 1st phase would entail
+                    simply re-skinning the existing UI, with minimal HTML changes. I spent a week refining my spike and integrating
+                    it into a branch. The next week, I switched images from individual images to CSS sprites.
+                </section>
+            </aside>
+        </slide>
 
         <!-- Theme System -->
         <slide>
             <hgroup>
                 <h2>Themes with LESS</h2>
             </hgroup>
+            <aside class="note">
+                Next, I implemented a new theming system with different colors/icons and got everything looking good in Chrome, Safari and IE8/9.
+            </aside>
         </slide>
 
         <!-- Legacy Browsers -->
@@ -1689,7 +1743,7 @@ Click to toggle popover
         <!-- LOOK AND FEEL -->
         <slide>
             <img src="http://www.mcginityphoto.com/Nature/Colorado/i-pzDkPhV/0/S/Inside%20Coors%20Field-S.jpg"
-                 class="right picture" style="margin-right: 0">
+                 class="right picture" style="margin-right: 20px; margin-top: 40px;">
             <hgroup>
                 <h2>Look & Feel</h2>
             </hgroup>
